<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_home_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="12dp"
        android:layout_marginBottom="5dp"
        android:paddingBottom="10dp"
        android:elevation="12dp"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:paddingHorizontal="5dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/text_view_discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discover"
                    android:textSize="@dimen/_11ssp"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="@color/dark_pink"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textSize="@dimen/_16ssp"
                    android:text="@string/best_apps_auction"
                    android:textColor="@color/calm_black"
                    app:layout_constraintTop_toBottomOf="@id/text_view_discover"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_transaction_search"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:boxCornerRadiusBottomEnd="18dp"
            app:boxCornerRadiusBottomStart="18dp"
            app:boxCornerRadiusTopEnd="18dp"
            app:boxCornerRadiusTopStart="18dp"
            app:hintEnabled="false"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconTint="@color/dark_grey"
            app:endIconMode="custom"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginTop="23dp"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_search_place_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/montserrat_regular"
            android:hint="Search items here..."
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            />

        </com.google.android.material.textfield.TextInputLayout>



    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">




        <TextView
            android:id="@+id/text_view_new_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/new_lelang_item"
            android:textColor="@color/calm_black"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_swipe_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_all"
            android:layout_marginLeft="@dimen/_12sdp"
            android:textSize="10sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/dark_pink"
            android:fontFamily="@font/montserrat_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_new_item"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_new_item_auction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_swipe_all"
            tools:listitem="@layout/rv_item_card_new_auction_item" />




    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>









</androidx.coordinatorlayout.widget.CoordinatorLayout>