<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_12sdp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/icon_back"/>


            <TextView
                android:id="@+id/text_view_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/register"
                android:textSize="@dimen/_18sdp"
                android:layout_marginLeft="11dp"
                android:textColor="@color/dark_pink"
                android:fontFamily="@font/montserrat_medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/icon_back"/>

            <LinearLayout
                android:id="@+id/linear_layout_insert_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintTop_toBottomOf="@id/text_view_register"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_name"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_light"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/dark_pink"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_input_text_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/montserrat_light"
                        android:hint="(Nama anda)"
                        android:textSize="14sp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_insert_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_insert_name"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_telp"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_light"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/dark_pink"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_input_text_telp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/dark_grey"
                        android:fontFamily="@font/montserrat_light"
                        android:hint="(No Handphone)"
                        android:textSize="14sp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_insert_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_insert_telp"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_email"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_light"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/dark_pink"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_input_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_light"
                        android:hint="(contoh@gmail.com)"
                        android:textSize="14sp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_insert_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_insert_email"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insert_password"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/montserrat_light"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="8dp"
                    app:boxCornerRadiusBottomStart="8dp"
                    app:boxCornerRadiusTopEnd="8dp"
                    app:boxCornerRadiusTopStart="8dp"
                    app:boxStrokeColor="@color/dark_pink"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:passwordToggleEnabled="true"
                    app:hintEnabled="false">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_input_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:fontFamily="@font/montserrat_light"
                        android:hint="(Password anda)"
                        android:textSize="14sp"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:layout_marginTop="@dimen/_16sdp"
                app:cornerRadius="@dimen/_12sdp"
                android:textAllCaps="false"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_insert_password"/>

            <ProgressBar
                android:id="@+id/progress_bar_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>